--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/canvas-confetti": "^1.6.4",
     "astro": "^4.15.2",
+    "astro-icon": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "canvas-confetti": "^1.9.3",
+    "embla-carousel": "^8.2.1",
+    "embla-carousel-auto-scroll": "^8.2.1",
+    "embla-carousel-autoplay": "^8.2.1",
     "postcss": "^8.4.43",
     "tailwindcss": "^3.4.10"
   }
